# votechain-contracts

./: .clippy.toml  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: audit.yml  ci.yml  container-scan.yml  frontend-ci.yml  fuzz.yml  merge-gate.yml  perf.yml  release.yml
api/: Cargo.toml  openapi.yml
backend/: .eslintrc.json  API_VERSIONING.md  OPENAPI_VALIDATION.md  README.md  REDIS_RESILIENCE_TESTING.md  package-lock.json  package.json
backend/bench/: api-bench.js
backend/src/: app.ts  cache.ts  index.ts  redis.ts  retry.ts  timeout.ts  types.ts
config/: local.toml  mainnet.toml  staging.toml  testnet.toml
contracts/governance/: Cargo.toml  PROPOSAL_STATE_TRANSITIONS.md
contracts/marketplace/: Cargo.toml
contracts/token/: Cargo.toml
deploy/: docker-compose.staging.yml  local.env.example  mainnet.env.example  staging.env.example
docs/: ARCHITECTURE_DIAGRAM.md  CI_PIPELINE.md  CONTAINER_SCANNING.md  GOVERNANCE_GLOSSARY.md  LOCAL_DEVELOPMENT.md  MONITORING.md  ONBOARDING.md  TROUBLESHOOTING.md  VERSIONING_POLICY.md  benchmarks.md  dao-integration-guide.md  deployment-manifests.md  events.md  linting.md  rpc-configuration.md
fixtures/: CHANGELOG.md  README.md  SETUP.md  package.json  tsconfig.json
frontend/: COLOR_CONTRAST_AUDIT.md  index.html  package-lock.json  package.json  vite.config.ts
monitoring/: alerts.yml  prometheus.yml
perf/: check-regression.js  thresholds.json
scripts/: deploy.sh  deploy_mainnet.sh  setup-local-soroban.sh  test_wasm.sh
(+88 files in other folders)
